# src/main/resources/swagger/StockServiceSwagger.json
@@ -107,6 +107,53 @@
 				"deprecated": false
 			}
 		},
+		"/globalshares/ojha/stock/v1/get/latest/stock/cmpycde/{companycde}": {
+			"get": {
+				"tags": [
+					"stock-detail-controller"
+				],
+				"summary": "/get/latest/stock/cmpycde/{companycde}",
+				"description": "This API is used to fetch all the stock detail based on company code",
+				"operationId": "getLatestStocksByCompanyCodeUsingGET",
+				"produces": [
+					"application/json"
+				],
+				"parameters": [
+					{
+						"name": "HTTP_AUTH_TOKEN",
+						"in": "header",
+						"description": "JWT token header",
+						"required": false,
+						"type": "string"
+					},
+					{
+						"name": "companycde",
+						"in": "path",
+						"description": "companycde",
+						"required": true,
+						"type": "string"
+					}
+				],
+				"responses": {
+					"200": {
+						"description": "Stock detail selected successfully",
+						"schema": {
+							"$ref": "#/definitions/StockDetailResponse"
+						}
+					},
+					"401": {
+						"description": "Unauthorized"
+					},
+					"403": {
+						"description": "Forbidden"
+					},
+					"404": {
+						"description": "Not Found"
+					}
+				},
+				"deprecated": false
+			}
+		},
 		"/globalshares/ojha/stock/v1/get/stock/cmpycde/{companycde}": {
 			"get": {
 				"tags": [
@@ -262,6 +309,46 @@
 				"deprecated": false
 			}
 		},
+		"/globalshares/ojha/stock/v1/getall/latest/stock": {
+			"get": {
+				"tags": [
+					"stock-detail-controller"
+				],
+				"summary": "/getall/latest/stock",
+				"description": "This API is used to delete the stock detail based on ID",
+				"operationId": "getAllLatestStocksUsingGET",
+				"produces": [
+					"application/json"
+				],
+				"parameters": [
+					{
+						"name": "HTTP_AUTH_TOKEN",
+						"in": "header",
+						"description": "JWT token header",
+						"required": false,
+						"type": "string"
+					}
+				],
+				"responses": {
+					"200": {
+						"description": "Stock detail deleted successfully",
+						"schema": {
+							"$ref": "#/definitions/StockDetailResponse"
+						}
+					},
+					"401": {
+						"description": "Unauthorized"
+					},
+					"403": {
+						"description": "Forbidden"
+					},
+					"404": {
+						"description": "Not Found"
+					}
+				},
+				"deprecated": false
+			}
+		},
 		"/globalshares/ojha/stock/v1/getall/stock": {
 			"get": {
 				"tags": [
@@ -375,7 +462,7 @@
 				},
 				"stockUpdtTms": {
 					"type": "string",
-					"format": "date-time"
+					"format": "date"
 				}
 			},
 			"title": "StockDetailEntity"
